--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     
     <!-- Theme & Icons -->
     <meta name="theme-color" content="#11111b" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     
     <!-- Schema.org VideoGame markup -->
     <script type="application/ld+json">
