fix: simplify page title to just Einoow

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Primary Meta Tags -->
     <title>Einoow</title>
-    <meta name="title" content="Einoow - Play Fun & Innovative Web Games" />
+    <meta name="title" content="Einoow" />
     <meta name="description" content="Discover and play creative web games. From AI-powered strategy to casual fun, Einoow brings innovative gaming experiences to your browser." />
     <meta name="keywords" content="web games, browser games, online games, strategy games, AI games, indie games" />
     <meta name="author" content="Einoow" />
